--- a/obdii/src/main/resources/com/bitplan/can4eve/gui/network.fxml
+++ b/obdii/src/main/resources/com/bitplan/can4eve/gui/network.fxml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Group?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="280.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-            <AnchorPane prefHeight="55.0" prefWidth="486.0">
-                     <children>
-                        <Label layoutX="14.0" layoutY="19.0" text="hostname:" />
-                        <TextField id="hostname" layoutX="87.0" layoutY="14.0" prefHeight="27.0" prefWidth="302.0" promptText="hostname" />
-                        <Label layoutX="407.0" layoutY="19.0" text="port:" />
-                        <TextField id="port" layoutX="447.0" layoutY="14.0" prefHeight="27.0" prefWidth="99.0" promptText="port" />
-                     </children>
-                  </AnchorPane>
-    </children>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+	minWidth="-Infinity" prefHeight="220.0" prefWidth="520.0"
+	xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="com.bitplan.obdii.javafx.WelcomeWizard$NetworkController">
+	<children>
+		<AnchorPane prefHeight="220.0" prefWidth="520.0">
+			<children>
+				<Label layoutX="14.0" layoutY="19.0" text="hostname" />
+				<TextField fx:id="hostName" id="hostName" layoutX="87.0" layoutY="14.0"
+					prefHeight="27.0" prefWidth="302.0" promptText="hostname" />
+				<Label layoutX="45.0" layoutY="59.0" text="port" />
+				<TextField fx:id="port" id="port" layoutX="85.0" layoutY="54.0"
+					prefHeight="27.0" prefWidth="99.0" promptText="port" />
+			</children>
+		</AnchorPane>
+	</children>
 </Pane>
