--- a/obdii/src/main/resources/com/bitplan/can4eve/gui/exception.fxml
+++ b/obdii/src/main/resources/com/bitplan/can4eve/gui/exception.fxml
@@ -11,13 +11,13 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-	minWidth="-Infinity" prefHeight="320.0" prefWidth="520.0"
+	minWidth="-Infinity" prefHeight="360.0" prefWidth="520.0"
 	xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1"
 	fx:controller="com.bitplan.can4eve.gui.javafx.ExceptionController">
 	<children>
 		<DialogPane fx:id="dialogPane" layoutX="0.0" layoutY="0.0">
 			<content>
-				<AnchorPane prefHeight="50.0" prefWidth="520.0">
+				<AnchorPane prefHeight="50.0" prefWidth="500.0">
 					<Label fx:id="contentLabel" AnchorPane.leftAnchor="0.0"
 						AnchorPane.topAnchor="0.0" />
 				</AnchorPane>
@@ -25,7 +25,7 @@
 			<expandableContent>
 				<GridPane>
 					<columnConstraints>
-						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+						<ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
 					</columnConstraints>
 					<rowConstraints>
 						<RowConstraints minHeight="0.0" vgrow="SOMETIMES" />
@@ -35,7 +35,7 @@
 						<Button fx:id="reportIssueButton" mnemonicParsing="false"
 							text="%reportIssue" GridPane.columnIndex="0" GridPane.rowIndex="0" />
 						<TextArea fx:id="textArea" editable="false" prefHeight="150.0"
-							prefWidth="220.0" wrapText="true" GridPane.columnIndex="0"
+							prefWidth="500.0" wrapText="true" GridPane.columnIndex="0"
 							GridPane.rowIndex="1" />
 					</children>
 				</GridPane>
