--- a/obdii/src/main/resources/com/bitplan/can4eve/gui/connectiontest.fxml
+++ b/obdii/src/main/resources/com/bitplan/can4eve/gui/connectiontest.fxml
@@ -2,16 +2,45 @@
 
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-	minWidth="-Infinity" prefHeight="360.0" prefWidth="520.0"
+	minWidth="-Infinity" prefHeight="330.0" prefWidth="520.0"
 	xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1"
 	fx:controller="com.bitplan.obdii.javafx.WelcomeWizard$ConnectionTestController">
 	<children>
-		<ProgressBar fx:id="progressBar" layoutX="14.0" layoutY="14.0" prefHeight="20.0"
-			prefWidth="500.0" progress="0.0" />
-		<TextArea fx:id="textArea" layoutX="14.0" layoutY="34.0" prefHeight="280.0"
-			prefWidth="500.0" />
+		<GridPane layoutX="14.0" layoutY="14.0" prefWidth="510.0"
+			vgap="10">
+			<columnConstraints>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
+					percentWidth="66.7" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+			</columnConstraints>
+			<rowConstraints>
+				<RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+			</rowConstraints>
+			<children>
+				<ProgressBar fx:id="progressBar" prefHeight="20.0"
+					prefWidth="500.0" progress="0.0" GridPane.columnSpan="2147483647" />
+				<TextArea fx:id="textArea" prefHeight="210.0" prefWidth="250.0"
+					GridPane.columnIndex="0" GridPane.rowIndex="1" />
+				<ImageView id="obdImage" fx:id="obdImage" fitHeight="73.0"
+					fitWidth="173.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+				</ImageView>
+				<TextArea fx:id="hint" prefHeight="70.0" prefWidth="500.0"
+					wrapText="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+					<font>
+						<Font size="16.0" />
+					</font>
+				</TextArea>
+			</children>
+		</GridPane>
 	</children>
 </Pane>
