--- a/obdii/src/main/resources/com/bitplan/can4eve/gui/network.fxml
+++ b/obdii/src/main/resources/com/bitplan/can4eve/gui/network.fxml
@@ -2,22 +2,53 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-	minWidth="-Infinity" prefHeight="220.0" prefWidth="520.0"
-	xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1"
+<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity"
+	minHeight="-Infinity" minWidth="-Infinity" prefHeight="220.0"
+	prefWidth="520.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1"
 	fx:controller="com.bitplan.obdii.javafx.WelcomeWizard$NetworkController">
 	<children>
 		<AnchorPane prefHeight="220.0" prefWidth="520.0">
 			<children>
-				<Label layoutX="14.0" layoutY="19.0" text="hostname" />
-				<TextField fx:id="hostName" id="hostName" layoutX="87.0" layoutY="14.0"
-					prefHeight="27.0" prefWidth="302.0" promptText="hostname" />
-				<Label layoutX="45.0" layoutY="59.0" text="port" />
-				<TextField fx:id="port" id="port" layoutX="85.0" layoutY="54.0"
-					prefHeight="27.0" prefWidth="99.0" promptText="port" />
+				<GridPane layoutX="10.0" layoutY="10.0" prefHeight="100"
+					hgap="10" prefWidth="500.0">
+					<columnConstraints>
+						<ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES"
+							minWidth="40.0" percentWidth="15.0" />
+						<ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
+					</columnConstraints>
+					<rowConstraints>
+						<RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+					</rowConstraints>
+					<children>
+						<Label layoutX="14.0" layoutY="19.0" text="hostname"
+							GridPane.columnIndex="0" GridPane.rowIndex="0" />
+						<TextField fx:id="hostName" id="hostName" layoutX="87.0"
+							layoutY="14.0" prefHeight="27.0" prefWidth="302.0" promptText="hostname"
+							GridPane.columnIndex="1" GridPane.rowIndex="0">
+							<tooltip>
+								<Tooltip text="%hostnameTooltip" />
+							</tooltip>
+						</TextField>
+						<Label layoutX="45.0" layoutY="59.0" text="port"
+							GridPane.columnIndex="0" GridPane.rowIndex="1" />
+						<TextField fx:id="port" id="port" layoutX="85.0"
+							layoutY="54.0" prefHeight="27.0" prefWidth="99.0" promptText="port"
+							GridPane.columnIndex="1" GridPane.rowIndex="1">
+							<tooltip>
+								<Tooltip text="%portTooltip" />
+							</tooltip>
+						</TextField>
+					</children>
+				</GridPane>
 			</children>
 		</AnchorPane>
 	</children>
