--- a/obdii/src/main/resources/com/bitplan/can4eve/gui/vehicle.fxml
+++ b/obdii/src/main/resources/com/bitplan/can4eve/gui/vehicle.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
 <Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity"
 	minHeight="-Infinity" minWidth="-Infinity" prefHeight="220.0"
@@ -14,9 +18,51 @@
 	<children>
 		<AnchorPane prefHeight="220.0" prefWidth="520.0">
 			<children>
-				<Label layoutX="23.0" layoutY="19.0" text="VIN" />
-				<TextField fx:id="vin" id="vin" layoutX="87.0" layoutY="19.0"
-					prefHeight="27.0" prefWidth="302.0" promptText="VIN" />
+				<GridPane layoutX="10.0" layoutY="10.0" prefWidth="505.0"
+					vgap="10">
+					<columnConstraints>
+						<ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES"
+							minWidth="10.0" />
+						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50" />
+					</columnConstraints>
+					<rowConstraints>
+						<RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+						<RowConstraints />
+						<RowConstraints />
+					</rowConstraints>
+					<children>
+						<ProgressBar fx:id="progressBar" prefHeight="20.0"
+							prefWidth="500.0" progress="0.0" GridPane.columnSpan="2147483647"
+							GridPane.rowIndex="0" />
+						<VBox minHeight="110.0" minWidth="260.0" prefHeight="110.0"
+							prefWidth="260.0" GridPane.columnIndex="2" GridPane.rowIndex="1"
+							GridPane.rowSpan="2147483647">
+							<children>
+								<ImageView id="vehicleImage" fx:id="vehicleImage"
+									fitHeight="110.0" fitWidth="260.0">
+								</ImageView>
+							</children>
+						</VBox>
+						<Label text="%vehicleModel" GridPane.columnIndex="0"
+							GridPane.rowIndex="2" />
+						<TextField id="model" fx:id="model" prefHeight="27.0"
+							prefWidth="302.0" promptText="Model" GridPane.columnIndex="1"
+							GridPane.rowIndex="2" />
+						<Label text="VIN" GridPane.columnIndex="0"
+							GridPane.rowIndex="3" />
+						<TextField id="vin" fx:id="vin" prefHeight="27.0"
+							prefWidth="302.0" promptText="VIN" GridPane.columnIndex="1"
+							GridPane.rowIndex="3" />
+						<Label text="%maxSpeed" GridPane.columnIndex="0"
+							GridPane.rowIndex="4" />
+						<TextField id="maxSpeed" fx:id="maxSpeed" prefHeight="27.0"
+							prefWidth="40" promptText="maxSpeed" GridPane.columnIndex="1"
+							GridPane.rowIndex="4" />
+					</children>
+				</GridPane>
 			</children>
 		</AnchorPane>
 
