--- a/obdii/src/main/resources/com/bitplan/can4eve/gui/vehicle.fxml
+++ b/obdii/src/main/resources/com/bitplan/can4eve/gui/vehicle.fxml
@@ -19,12 +19,13 @@
 		<AnchorPane prefHeight="220.0" prefWidth="520.0">
 			<children>
 				<GridPane layoutX="10.0" layoutY="10.0" prefWidth="505.0"
-					vgap="10">
+					vgap="10" hgap="10">
 					<columnConstraints>
 						<ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES"
 							minWidth="10.0" />
 						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50" />
+						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
+							percentWidth="33" />
 					</columnConstraints>
 					<rowConstraints>
 						<RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
@@ -37,30 +38,35 @@
 						<ProgressBar fx:id="progressBar" prefHeight="20.0"
 							prefWidth="500.0" progress="0.0" GridPane.columnSpan="2147483647"
 							GridPane.rowIndex="0" />
-						<VBox minHeight="110.0" minWidth="260.0" prefHeight="110.0"
-							prefWidth="260.0" GridPane.columnIndex="2" GridPane.rowIndex="1"
+						<VBox minHeight="76" minWidth="173" prefHeight="76"
+							prefWidth="176" GridPane.columnIndex="2" GridPane.rowIndex="1"
 							GridPane.rowSpan="2147483647">
 							<children>
 								<ImageView id="vehicleImage" fx:id="vehicleImage"
-									fitHeight="110.0" fitWidth="260.0">
+									fitHeight="76" fitWidth="176">
 								</ImageView>
 							</children>
 						</VBox>
 						<Label text="%vehicleModel" GridPane.columnIndex="0"
 							GridPane.rowIndex="2" />
 						<TextField id="model" fx:id="model" prefHeight="27.0"
-							prefWidth="302.0" promptText="Model" GridPane.columnIndex="1"
-							GridPane.rowIndex="2" />
+							prefWidth="150" maxWidth="150" promptText="Model" editable="false"
+							GridPane.columnIndex="1" GridPane.rowIndex="2" />
 						<Label text="VIN" GridPane.columnIndex="0"
 							GridPane.rowIndex="3" />
 						<TextField id="vin" fx:id="vin" prefHeight="27.0"
-							prefWidth="302.0" promptText="VIN" GridPane.columnIndex="1"
-							GridPane.rowIndex="3" />
-						<Label text="%maxSpeed" GridPane.columnIndex="0"
+							prefWidth="150.0" maxWidth="150" promptText="VIN" editable="false"
+							GridPane.columnIndex="1" GridPane.rowIndex="3" />
+						<Label text="%vehicleManufacturer" GridPane.columnIndex="0"
 							GridPane.rowIndex="4" />
-						<TextField id="maxSpeed" fx:id="maxSpeed" prefHeight="27.0"
-							prefWidth="40" promptText="maxSpeed" GridPane.columnIndex="1"
-							GridPane.rowIndex="4" />
+						<TextField id="vehicleManufacturer" fx:id="vehicleManufacturer"
+							prefHeight="27.0" prefWidth="150" maxWidth="150" promptText="%vehicleManufacturer"
+							editable="false" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+						<Label text="%vehicleYear" GridPane.columnIndex="0"
+							GridPane.rowIndex="5" />
+						<TextField id="vehicleYear" fx:id="vehicleYear"
+							prefHeight="27.0" prefWidth="50" maxWidth="50" promptText="%vehicleYear"
+							editable="false" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 					</children>
 				</GridPane>
 			</children>
